got basic listing and marking 'completed' working

--- a/angular-todo-app/src/app/todo/components/todo-item/todo-item.component.html
+++ b/angular-todo-app/src/app/todo/components/todo-item/todo-item.component.html
@@ -1,17 +1,19 @@
-<nz-list-item class="bg-gray-50 rounded-lg p-3 shadow-sm mb-2" >
-  <div class="flex items-center w-full">
-    <label nz-checkbox
-      [nzChecked]="todo.completed" (click)="onCheckboxChange()"
-    >
-    </label>
-    <span
-      class="ml-4 text-lg"
-      [ngClass]="{
-      'line-through text-gray-400': todo.completed,
-      'text-gray-800': !todo.completed
-      }"
-    >
-      {{ todo.title }}
-    </span>
-  </div>
-</nz-list-item>
+<div class="flex items-center  w-full gap-4">
+  <span
+    class="ml-4 text-lg"
+    [ngClass]="{
+    'line-through text-gray-400': todo.completed,
+    'text-gray-800': !todo.completed
+    }"
+  >
+    {{ todo.title }}
+  </span>
+
+  <button
+    nz-button
+    (click)="onCheckboxChange()"
+    [nzType]="todo.completed ? 'primary' : 'default'"
+  >
+    {{ todo.completed ? 'Completed' : 'Done' }}
+  </button>
+</div>
